--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,11 @@
   "name": "detrack/elasticroute",
   "description": "Free, intelligent routing for your logistics, now on PHP.",
   "type": "library",
+  "require": {
+    "php": "^7.1"
+  },
   "require-dev": {
-    "phpunit/phpunit": "^8.0",
+    "phpunit/phpunit": "^8.0 || ^7.5",
     "vlucas/phpdotenv": "^v3.3.2"
   },
   "license": "MIT",
@@ -15,6 +18,5 @@
     "psr-4": {
       "Detrack\\ElasticRoute\\": "src/"
     }
-  },
-  "require": {}
+  }
 }
