change order of environment variables in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ php:
   - '7.3'
 install:
   - composer install
-  - cp tests/.env.example tests/.env
   - echo "elasticroute_api_key=$API_KEY" >> tests/.env
   - echo "elasticroute_path=$ER_PATH" >> tests/.env
+  - cat tests/.env.example >> tests/.env
 script:
   - phpunit tests --bootstrap tests/bootstrap.php
