--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0 || ^7.5",
-    "vlucas/phpdotenv": "^v3.3.2"
+    "vlucas/phpdotenv": "^v3.3.2",
+    "php-coveralls/php-coveralls": "^2.1"
   },
   "license": "MIT",
   "authors": [{
